--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,14 @@
    - "0.10"
    - "0.8"
    - "0.6"
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - npm install --quiet -g karma
+  - ./server.js > /dev/null &
+  - sleep 1 # give server time to start
+
+script:
+  - karma start test/client/config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
+  - karma start test/client/config/karma-e2e.conf.js --reporters=dots --browsers=Firefox
