--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
-  - ./server.js > /dev/null &
-  - sleep 1 # give server time to start
+  - node server.js > /dev/null &
+  - sleep 3
 
 script:
   #- karma start config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
