--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "devDependencies": {
         "sinon": "~1.7.2",
         "chai": "~1.6.1",
-        "mocha": "~1.10.0"
+        "mocha": "~1.10.0",
+        "karma": "~0.8"
     },
     "scripts": {
-        "test": "mocha server/tests --recursive"
+        "test": "mocha server/tests --recursive",
+        "test": "./node_modules/.bin/karma start --single-run --browsers Firefox"
     }
 }
