--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,13 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - npm install --quiet -g karma
+  - node server.js > /dev/null &
+  - sleep 3
+
+script:
+  # The below script is commented out because angular unit tests are not implemented yet
+  #- karma start config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
+  - karma start test/client/config/karma-e2e.conf.js --reporters=dots --browsers=Firefox
+
 
