--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 
 before_script:
   - mysql -e 'create database ledita_test;'
+  - mysql < database/ledita-web-app.sql
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
