--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
    - "0.8"
 
 before_script:
+#FIXME These scripts need to be reorganized to work in dev vs ci envs
   - mysql -e 'create database ledita_test;'
   - mysql < database/ledita-web-app.sql --verbose
   - mysql < database/demo-data.sql --verbose  
@@ -11,11 +12,11 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
-  - node server.js > /dev/null &
+  - NODE_ENV=ci node server.js > /dev/null &
   - sleep 3
 
 script:
-  - npm test
+  - NODE_ENV=ci npm test
   # The below script is commented out because angular unit tests are not implemented yet
   #- karma start config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
   - karma start test/client/config/karma-e2e.conf.js --reporters=dots --browsers=Firefox
