--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ node_js:
 before_script:
 #FIXME These scripts need to be reorganized to work in dev vs ci envs
   - mysql -e 'create database ledita_test;'
-  - mysql < database/ledita-web-app.sql --verbose
-  - mysql < database/demo-data.sql --verbose  
-  - mysql < config/database_user_ci.sql --verbose  
+  - mysql < database/ci/ledita-test.sql --verbose
+  - mysql < database/test-data.sql --verbose  
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
