fix path to script for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
 #FIXME These scripts need to be reorganized to work in dev vs ci envs
   - mysql -e 'create database ledita_test;'
   - mysql < database/ci/ledita-test.sql --verbose
-  - mysql < database/test-data.sql --verbose  
+  - mysql < database/ci/test-data.sql --verbose  
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
