integrate bcrypt for password hashing

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "dependencies": {
         "mysql": "~2.0.0-alpha8",
+        "bcrypt": "*",
         "express": "*",
         "jade": "*",
         "ejs": "*",        
