--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install --quiet -g karma
+  - npm install -g node-gyp
   - NODE_ENV=ci node server.js > /dev/null &
   - sleep 3
 
