add security http response headers with helmet, fix ui-hootstrap reference in index.html

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "mysql": "~2.0.0-alpha8",
         "bcrypt": "*",
         "express": "*",
+        "helmet": "*",
         "jade": "*",
         "ejs": "*",        
         "passport": "*",
