--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
         "ejs": "*",        
         "passport": "*",
         "passport-local": "*",
-        "underscore": "*",
-        "validator": "~1.1.1",
-        "passport-twitter": "~0.1.4",
-        "passport-facebook": "~0.1.5",
-        "passport-google": "~0.3.0",
-        "passport-linkedin": "~0.1.3"
+        "underscore": "*"
     },
 
     "scripts": {
