put back validator dependency, acceidentally removed in previous commit

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "ejs": "*",        
         "passport": "*",
         "passport-local": "*",
-        "underscore": "*"
+        "underscore": "*",
+        "validator": "~1.1.1"
     },
 
     "scripts": {
