--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ before_script:
   - mysql -e 'create database ledita_test;'
   - mysql < database/ci/ledita-test.sql --verbose
   - mysql < database/ci/test-data.sql --verbose  
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  #- export DISPLAY=:99.0
+  #- sh -e /etc/init.d/xvfb start
   - npm install -g node-gyp
   - NODE_ENV=ci node server.js > /dev/null &
   - sleep 3
@@ -16,6 +16,9 @@ script:
   - NODE_ENV=ci npm test
   # The below script is commented out because angular unit tests are not implemented yet
   #- karma start config/karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
-  - karma start test/client/config/karma-e2e.conf.js --reporters=dots --browsers=Firefox
+  
+  # Try to use PhantomJS 
+  #- karma start test/client/config/karma-e2e.conf.js --reporters=dots --browsers=Firefox
+  - karma start test/client/config/karma-e2e.conf.js --reporters=progress --browsers=PhantomJS
 
 
