--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "passport": "*",
         "passport-local": "*",
         "underscore": "*",
-        "validator": "~1.1.1"
+        "validator": "~1.1.1",
+        "when": "~2.3.0"
     },
 
     "scripts": {
