--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "passport-local": "*",
         "underscore": "*",
         "validator": "~1.1.1",
-        "when": "~2.3.0"
+        "when": "~2.3.0",
+        "async": "*"
     },
 
     "scripts": {
