--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "karma-ng-scenario": "~0.1"
     },
     "scripts": {
-        "test": "mocha server/tests -R spec --recursive"
+        "test": "mocha server/tests -R spec --recursive",
+        "client-test": "karma start test/client/config/karma.config.js"
     }
 }
