--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ before_script:
 script:
   - NODE_ENV=ci npm test
   #- NODE_ENV=ci npm run-script client-test
-  # The below script is commented out because angular unit tests are not implemented yet
-  - karma start test/client/config/karma.config.js --no-auto-watch --single-run --reporters=progress --browsers=Firefox
+  - karma start test/client/config/karma.config.js --no-auto-watch --single-run --reporters=progress --browsers=PhantomJS
   - karma start test/client/config/karma-e2e.conf.js --reporters=progress --browsers=PhantomJS
