--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "scripts": {
         "test": "mocha server/tests -R spec --recursive",
-        "client-test": "karma start test/client/config/karma.config.js"
+        "client-test": "karma start test/client/config/karma.config.js",
+        "client-e2e-test": "karma start test/client/config/karma-e2e.conf.js"
     }
 }
