--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-    "name": "ledita-web-app",
-    "version": "0.0.1",
-    "dependencies": {
-        "mysql": "~2.0.0-alpha8",
-        "log4js": "*",
-        "bcrypt": "*",
-        "express": "~3.3.4",
-        "helmet": "*",
-        "jade": "*",
-        "ejs": "*",        
-        "passport": "*",
-        "passport-local": "*",
-        "underscore": "*",
-        "validator": "~1.1.1",
-        "when": "~2.3.0",
-        "async": "*"
-    },
-
-    "scripts": {
-        "start": "server.js"
-    },
-    "engines": {
-        "node": "0.10.x"
-    },
-    "devDependencies": {
-        "sinon": "~1.7.2",
-        "chai": "~1.6.1",
-        "mocha": "~1.10.0",
-        "karma": "~0.10",
-        "karma-ng-scenario": "~0.1"
-    },
-    "scripts": {
-        "test": "mocha server/tests -R spec --recursive",
-        "client-test": "karma start test/client/config/karma.config.js",
-        "client-e2e-test": "karma start test/client/config/karma-e2e.conf.js"
-    }
+  "name": "ledita-web-app",
+  "license": "MIT",
+  "version": "0.0.1",
+  "dependencies": {
+    "mysql": "~2.0.0-alpha8",
+    "log4js": "*",
+    "bcrypt": "*",
+    "express": "~3.3.4",
+    "helmet": "*",
+    "jade": "*",
+    "ejs": "*",
+    "passport": "*",
+    "passport-local": "*",
+    "underscore": "*",
+    "validator": "~1.1.1",
+    "when": "~2.3.0",
+    "async": "*"
+  },
+  "scripts": {
+    "test": "mocha server/tests -R spec --recursive",
+    "client-test": "karma start test/client/config/karma.config.js",
+    "client-e2e-test": "karma start test/client/config/karma-e2e.conf.js"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "devDependencies": {
+    "sinon": "~1.7.2",
+    "chai": "~1.6.1",
+    "mocha": "~1.10.0",
+    "karma": "~0.10",
+    "karma-ng-scenario": "~0.1",
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0"
+  }
 }
