--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "sinon": "~1.7.2",
     "chai": "~1.6.1",
+    "chai-datetime": "*",
     "mocha": "~1.10.0",
     "karma": "~0.10",
     "karma-ng-scenario": "~0.1",
