--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "async": "*"
   },
   "scripts": {
-    "test": "mocha server/tests -R spec --recursive",
+    "test": "mocha test/server -R spec --recursive",
     "client-test": "karma start test/client/config/karma.config.js",
     "client-e2e-test": "karma start test/client/config/karma-e2e.conf.js"
   },
