--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ejs": "*",
     "passport": "*",
     "passport-local": "*",
-    "underscore": "*",
+    "underscore": "~1.5.1",
     "validator": "~1.1.1",
     "when": "~2.3.0",
     "async": "*"
