add karma-coverage for client side unit and e2e coverage reports

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "mocha test/server -R spec --recursive",
-    "test-cov": "mocha --require blanket test/server -R html-cov --recursive > coverage.html",
+    "test-cov": "mocha --require blanket test/server -R html-cov --recursive > test/server/coverage.html",
     "client-test": "karma start test/client/config/karma.config.js",
     "client-e2e-test": "karma start test/client/config/karma-e2e.conf.js"
   },
@@ -38,7 +38,8 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.7",
-    "blanket": "~1.1.6"
+    "blanket": "~1.1.6",
+    "karma-coverage": "~0.1.4"
   },
   "config": {
     "blanket": {
