--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "underscore": "~1.5.2",
     "validator": "~1.1.1",
     "when": "~2.3.0",
-    "async": "*"
+    "async": "*",
+    "underscore.string": "~2.3.3"
   },
   "scripts": {
     "test": "mocha test/server -R spec --recursive",
